--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <!-- saved from url=(0043)https://www.bnm.gov.my/finmkt.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style type="text/css" id="jarallax-clip-0">
-#jarallax-container-0 {
+#jarallax-container-0 
+{
            clip: rect(0 1903px 447.71875px 0);
            clip: rect(0, 1903px, 447.71875px, 0);
-}
-.pie {
-  width:400px;
-  height:300px;
-  padding: 1em;
 }
 </style>
         </head>
@@ -120,14 +116,14 @@
          <div class="row justify-content-center text-center mb-3">
            <div class="col">
              <h2 class="h2">Activity in the Sandbox</h2>
-             <p><small class="text-muted" style="font-size: 14px;">(Updated as at 1Q2021)</small></p>
+             <p><small class="text-muted" style="font-size: 14px;">(Updated as at 2Q2021)</small></p>
            </div>
          </div>
        </div>
  
          <div class="row justify-content-center">
            <div class="col-auto pt-7 mr-5 aos-init aos-animate text-light" data-aos="fade-up" data-aos-delay="100" style="text-align: center;">
-             <span class="display-4 d-block" data-countup="" data-start="1" data-end="93" data-duration="5" data-grouping="true" style="font-size: 120px; text-align: center;">93</span>
+             <span class="display-4 d-block" data-countup="" data-start="1" data-end="101" data-duration="5" data-grouping="true" style="font-size: 120px; text-align: center;">101</span>
              <span class="h4">Applications</span>
              <div style="text-align: center;"><span class="h4">submitted to date</span></div>
            </div> 
@@ -139,12 +135,17 @@
                        <tbody><tr>
                          <th class="h5 pt-1 pb-1" scope="row">Insurance 
                  </th>
+                         <td class="h5 pt-1 pb-1" style="text-align: right;">29</td>
+                       </tr>
+                       <tr>
+                        <th class="h5 pt-1 pb-1" scope="row"> Money Services
+                 </th>
                          <td class="h5 pt-1 pb-1" style="text-align: right;">23</td>
                        </tr>
                        <tr>
-                        <th class="h5 pt-1 pb-1" scope="row">Payments 
+                         <th class="h5 pt-1 pb-1" scope="row">Payments
                  </th>
-                         <td class="h5 pt-1 pb-1" style="text-align: right;">19</td>
+                         <td class="h5 pt-1 pb-1" style="text-align: right;">20</td>
                        </tr>
                        <tr>
                          <th class="h5 pt-1 pb-1" scope="row">Banking & Lending
@@ -152,47 +153,49 @@
                          <td class="h5 pt-1 pb-1" style="text-align: right;">16</td>
                        </tr>
                        <tr>
-                         <th class="h5 pt-1 pb-1" scope="row">Money Services
-                 </th>
-                         <td class="h5 pt-1 pb-1" style="text-align: right;">22</td>
-                       </tr>
-                       <tr>
                        </tr><tr>
+                        <th class="h5 pt-1 pb-1" scope="row">Authentication 
+                </th>
+                        <td class="h5 pt-1 pb-1" style="text-align: right;">6</td>
+                      </tr>
+                       <tr>
                          <th class="h5 pt-1 pb-1" scope="row">Others
                  </th>
-                         <td class="h5 pt-1 pb-1" style="text-align: right;">13</td>
+                         <td class="h5 pt-1 pb-1" style="text-align: right;">7</td>
                        </tr>
                        </tbody></table>
-                       <small style="text-align: center; font-size: 14px;" class="ml-2 text-muted">(Cumulative number of applicants since establishment of the Regulatory Sandbox in 2016)</small>
+                       <small style="text-align: center; font-size: 14px;" class="ml-2 text-muted">(Cumulative number of applicants since establishment of the Regulatory Sandbox)</small>
                      </div>
 
        
        <!--  FIN MKT LONG TERM INDICATORS -->
        
-       <div class="card col-5" style="height: fit-content;" >
+       <div class="card col-6" style="height: fit-content;" >
                     <div class="card-body flex-column" >
                       <table class="table pricing-table ">
-                        <h4 class="pb-3" style="text-align: center; color: black;">Applicant(s) currently in live-testing</h4>
+                        <h4 class="pb-3" style="text-align: center; color: black;">Applicant(s) currently in the Sandbox</h4>
                     <thead>
                       <tr>
                         <th scope="col" class=" px-2 h6" style="color: black;"> Company name</th>
                         <th scope="col flex" class=" px-2 h6" style="color: black;">Product</th>
                         <th scope="col" class=" px-2 bg-primary text-light h6">Start Date</th>
-                        <th scope="col" class=" px-2 h6" style="color: black;">End Date</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td scope="col" class="py-1 px-2">Jirnexu Sdn Bhd</td>
-                        <td scope="col" class="py-1 px-2">RinggitPlus</td>
-                        <td scope="col" class="py-1 px-2 bg-primary-alt">October 2017</td>
-                        <td scope="col" class="py-1 px-2">undefined</td>
+                        <td scope="col" class="py-1 px-2">Qoala Technology Sdn Bhd</td>
+                        <td scope="col" class="py-1 px-2">Qoala.app</td>
+                        <td scope="col" class="py-1 px-2 bg-primary-alt">May 2021</td>
                       </tr>
                       <tr>
                         <td scope="col" class="py-1 px-2">Pru-BSN Takaful Sdn Bhd</td>
                         <td scope="col" class="py-1 px-2">Pru-BSN Aman</td>
                         <td scope="col" class="py-1 px-2 bg-primary-alt">September 2019</td>
-                        <td scope="col" class="py-1 px-2">September 2021</td>
+                      </tr>
+                      <tr>
+                        <td scope="col" class="py-1 px-2">Jirnexu Sdn Bhd</td>
+                        <td scope="col" class="py-1 px-2">RinggitPlus</td>
+                        <td scope="col" class="py-1 px-2 bg-primary-alt">October 2017</td>
                       </tr>
                       </tbody></table>
                     </div>
